package domain.prenda;

public interface UniformeInstituciones {
	public Prenda generarCalzado();
	public Prenda generarParteInferior();
	public Prenda generarParteSuperior();
}
